--- a/styles/globals.css
+++ b/styles/globals.css
@@ -547,7 +547,7 @@ label + .css-1nbvhrz-MuiInputBase-root-MuiInput-root-MuiSelect-root {
 }
 
 #notifications-menu ul {
-  width: 370px;
+  width: 350px;
   font-family: "ManropeNormal" !important;
 }
 
